Resolve formating issues